RESOLVED FIXED221502
[LFC][IFC] Continuation pre and post block inline boxes should not have both the start and end decorations of the original inline box
https://bugs.webkit.org/show_bug.cgi?id=221502
Summary [LFC][IFC] Continuation pre and post block inline boxes should not have both ...
alan
Reported 2021-02-05 14:25:41 PST
<span style="margin-left: 10px;><div></div></span> the inline box inside the post block should not have left margin.
Attachments
Patch (6.29 KB, patch)
2021-02-05 14:43 PST, alan
no flags
Patch (6.23 KB, patch)
2021-02-06 08:02 PST, alan
no flags
alan
Comment 1 2021-02-05 14:43:12 PST
Antti Koivisto
Comment 2 2021-02-06 07:16:55 PST
Comment on attachment 419467 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=419467&action=review > Source/WebCore/layout/integration/LayoutIntegrationBoxTree.cpp:88 > + if (!childRenderer.parent()->isAnonymousBlock()) > + return makeUnique<Layout::ContainerBox>(Layout::Box::ElementAttributes { Layout::Box::ElementType::GenericElement }, WTFMove(style)); I'd just revert the condition and use the makeUnique at the end in all cases.
alan
Comment 3 2021-02-06 08:02:02 PST
EWS
Comment 4 2021-02-06 10:01:32 PST
Committed r272463: <https://commits.webkit.org/r272463> All reviewed patches have been landed. Closing bug and clearing flags on attachment 419502 [details].
Radar WebKit Bug Importer
Comment 5 2021-02-10 14:38:24 PST
Note You need to log in before you can comment on or make changes to this bug.