Source/WebCore/layout/integration/LayoutIntegrationBoxTree.cpp
@@ -83,8 +83,25 @@ void BoxTree::buildTree()
         if (is<RenderBlock>(childRenderer))
             return makeUnique<Layout::ReplacedBox>(Layout::Box::ElementAttributes { Layout::Box::ElementType::GenericElement }, WTFMove(style));
 
-        if (is<RenderInline>(childRenderer))
+        if (is<RenderInline>(childRenderer)) {
+            if (childRenderer.parent()->isAnonymousBlock()) {
+                // This looks like continuation renderer.
+                auto& renderInline = downcast<RenderInline>(childRenderer);
+                auto shouldNotRetainBorderPaddingAndMarginStart = renderInline.isContinuation();
+                auto shouldNotRetainBorderPaddingAndMarginEnd = !renderInline.isContinuation() && renderInline.inlineContinuation();
+                if (shouldNotRetainBorderPaddingAndMarginStart) {
+                    style.setMarginStart(RenderStyle::initialMargin());
+                    style.resetBorderLeft();
+                    style.setPaddingLeft(RenderStyle::initialPadding());
+                }
+                if (shouldNotRetainBorderPaddingAndMarginEnd) {
+                    style.setMarginEnd(RenderStyle::initialMargin());
+                    style.resetBorderRight();
+                    style.setPaddingRight(RenderStyle::initialPadding());
+                }
+            }
             return makeUnique<Layout::ContainerBox>(Layout::Box::ElementAttributes { Layout::Box::ElementType::GenericElement }, WTFMove(style));
+        }
 
         ASSERT_NOT_REACHED();
         return nullptr;
